--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,12 @@ header > h1 {
 }
 
 .badge {
+    /* display: flex;
+    align-items: center;
+    align-self: center; */
     background-color: #e2584d;
-    font-size: 14px;
-    padding: 2px 10px;
+    font-size: 13px;
+    padding: 5px 8px;
     font-family: 'Baloo Tammudu 2', cursive;
 }
 
@@ -61,6 +64,11 @@ header > h1 {
     text-align: center;
     font-family: 'Baloo Tammudu 2', cursive;
     font-weight: bold;
+}
+
+.choices {
+    display: flex;
+    justify-content: space-around;
 }
 
 
