--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,6 @@ header > h1 {
 }
 
 .badge {
-    /* display: flex;
-    align-items: center;
-    align-self: center; */
     background-color: #e2584d;
     font-size: 13px;
     padding: 5px 8px;
@@ -68,9 +65,8 @@ header > h1 {
 
 .choices {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
-
 
 
 
