--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+title{
+    background-color: #060f22;
+}
+
 body {
     background-color: #060f22;
 }
@@ -14,10 +18,18 @@ header {
     padding: 20px;
 }
 
+header:hover {
+    background-color: #060f22;
+}
+
 header > h1 {
     color: #060f22;
     text-align: center;
     font-family: 'Baloo Tammudu 2', cursive;
+}
+
+header > h1:hover {
+    color: white;
 }
 
 .score-board {
@@ -66,6 +78,11 @@ header > h1 {
 .choices {
     display: flex;
     justify-content: space-evenly;
+}
+
+.choice:hover {
+    cursor: pointer;
+
 }
 
 
